@@ -1,3 +1,10 @@
+Mon Dec 20 16:18:55 2004  Peter Naulls  <peter@chocky.org>
+
+	* source/math-asm/_fabsf.s: Added fabsf function.
+	* source/sys/_mem.s, source/sys/_memset.s:  Replaced
+	  our memset with hopefully faster (and simpler) one
+	  from glibc.
+
 Sat Dec 18 18:37:52 2004  John Tytgat  <John.Tytgat@aaug.net>
 
 	* source/sys/debug.c: Removed __debugnl(); Added debug print of
@@ -439,7 +446,7 @@ Mon Sep  6 09:35:03 2004  Peter Naulls  <peter@chocky.org>
 	* source/clib/pthread.h: Fix spelling mistakes. Add comment about
 	  Wimp_Poll.
 	* source/unix/open.c, source/unix/stat.c: Add some optional debug.
-	* source/unix/select.c: Prevent blocking by judicious use pthread
+	* source/unix/select.c: Prevent blocking by judicious use of pthread
 	  control.
 	* source/unix/unix.c: Prevent atexit handlers being called more
 	  than once.
@@ -514,7 +521,7 @@ Sat Jun 12 09:36:14 2004  Peter Naulls  <peter@chocky.org>
 	* source/clib/unixlib/features.h: Include definitions from glibc,
 	  fix wording.
 	* source/math/j1.c, source/math/fmod: Prevent warnings
-	* source/netlib/getpeernam.c: Update funtion header to match
+	* source/netlib/getpeernam.c: Update function header to match
 	  declaration
 	* source/unix/fstat.c, source/unix/lseek.c, source/unix/lstat.c:
 	  Add 64-bit variants.
